# ref

./: .gitignore  README.md
socket/: client.c  compile.sh  constants.h  server.c
vcpkg/: CMakeLists.txt  README.md  main.cpp
vcpkg-qt/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
vcpkg-qt/src/: MainWindow.cpp  MainWindow.hpp  main.cpp
vcpkg-qt/ui/: MainWindow.ui
vpkg-test/: README.md  main.cpp  vcpkg.json
